package com.restapi.microtech.entity.enums;

public enum NiveauClient {
    BASIC,
    SILVER,
    GOLD,
    PLATINUM
}
