package com.restapi.microtech.entity.enums;

public enum StatutCommande {
    PENDING,
    CONFIRMED,
    CANCELED,
    REJECTED
}