package com.restapi.microtech.entity.enums;

public enum StatutPaiement {
    EN_ATTENTE,
    ENCAISSE,
    REJETE
}
