package com.restapi.microtech.entity.enums;

public enum TypePaiement {
    ESPECES,
    CHEQUE,
    VIREMENT
}
