package com.restapi.microtech.entity.enums;

public enum UserRole {
    ADMIN,
    CLIENT
}
